Checked new English strings

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -12,18 +12,18 @@ MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negative balanc
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Positive balance: {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=Balance summary
 MainFrame.Transactions.Preferences.changeColor=Change color
-MainFrame.Transactions.Preferences.changeColor.tooltip=Click this button to change the text color
+MainFrame.Transactions.Preferences.changeColor.tooltip=Click here to change the text color
 MainFrame.Transactions.Preferences.setDefault=Default settings
-MainFrame.Transactions.Preferences.setDefault.tooltip=Click this button to restore the default settings
+MainFrame.Transactions.Preferences.setDefault.tooltip=Click here to restore the default settings
 MainFrame.Transactions.Preferences.ChooseColorDialog.title=Choose a color
-MainFrame.Transactions.Preferences.title=Transactions view
-MainFrame.Transactions.Preferences.tooltip=This tab allows you to configure the transactions view appearance
+MainFrame.Transactions.Preferences.title=Transactions Table
+MainFrame.Transactions.Preferences.tooltip=Through this tab you can configure the display of the transactions table
 MainFrame.ReadLastError=Error in reading the last opened file {0}
-MainFrame.ShowSubtransactions=Display subtransactions ...
+MainFrame.ShowSubtransactions=Display subtransactions...
 MainFrame.ShowSubtransactions.All=All
 MainFrame.ShowSubtransactions.None=None
 MainFrame.ShowSubtransactions.ToolTip=Use this menu to show or hide all subtransactions
-MainFrame.showColumns=Show/Hide columns ...
+MainFrame.showColumns=Display columns...
 MainFrame.showColumns.ToolTip=Use this menu to show or hide columns
 
 MainMenu.File=File
@@ -49,11 +49,11 @@ MainMenu.SaveAs=Save as ...
 MainMenu.SaveAs.Mnemonic=A
 MainMenu.SaveAs.ToolTip=Creates a copy of the current file
 
-MainMenuBar.Print=Print
-MainMenuBar.Print.ToolTip=Prints the current view
+MainMenuBar.Print=Print...
+MainMenuBar.Print.ToolTip=Start printing
 MainMenuBar.Print.Accelerator=P
 MainMenuBar.Print.Error.Message=<html>The following error occured during printing:<br>{0}</html>
-MainMenuBar.Print.Error.Title=printing error
+MainMenuBar.Print.Error.Title=Error while printing
 
 MainMenu.Preferences=Preferences
 MainMenu.Preferences.ToolTip=Opens the preferences management dialog
@@ -108,8 +108,8 @@ MainMenuBar.Filter.Tooltip=Filters the transaction table
 MainMenuBar.Filter.Mnemonic=I
 MainMenuBar.checked=Checked transactions
 MainMenuBar.notChecked=Unchecked transactions
-MainMenuBar.customizedFilter=Customized filter
-MainMenuBar.customizedFilter.toolTip=Opens the customized filter dialog
+MainMenuBar.customizedFilter=Customized filters
+MainMenuBar.customizedFilter.toolTip=Opens the dialog for customization of filters 
 MainMenuBar.eraseFilters=Clear filters
 MainMenuBar.eraseFilters.toolTip=Clears all filters
 MainMenuBar.Receipts=Receipts
@@ -120,15 +120,15 @@ MainMenuBar.notChecked.toolTip=Selects unchecked transactions
 MainMenuBar.Receipts.toolTip=Selects receipts
 MainMenuBar.Expenses.toolTip=Selects expenses
 MainMenuBar.AccountFilter.toolTip=Selects transactions of {0} account
-MainMenuBar.NoAccountFilter.toolTip=Clears account filter
-MainMenuBar.NoCheckedFilter.toolTip=Clears checked/unchecked filter
-MainMenuBar.NoAmountFilter.toolTip=Clears the expense/receipt filter
+MainMenuBar.NoAccountFilter.toolTip=Deletes the accounts filter 
+MainMenuBar.NoCheckedFilter.toolTip=Deletes the status filter (checked/unchecked) 
+MainMenuBar.NoAmountFilter.toolTip=Deletes the amount filter (expense/receipt) 
 
 MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
 MainMenu.QuestionMark.ToolTip=Shows help
 
-MainMenu.About=About ...
+MainMenu.About=About...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Shows information about this program (author, version ...)
 
@@ -148,9 +148,9 @@ MainMenu.CheckUpdate.NoUpdate=Yapbam is up to date
 BalanceHistory.title=Balance history
 BalanceHistory.toolTip=Day-to-day balance chart
 BalanceHistory.balance=Balance of {0}: {1}
-BalanceHistory.chart.toolTip=Move the vertical bar to display another day's balance below
+BalanceHistory.chart.toolTip=Move the vertical bar down to view the balance of another day
 BalanceHistory.showGrid=Show grid
-BalanceHistory.showGrid.toolTip=Check this box to display the grid
+BalanceHistory.showGrid.toolTip=Check this box to see the grid
 BalanceHistory.report.toolTip=Click on the chart to change the day 
 
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
@@ -249,7 +249,7 @@ Transaction.statement=Statement
 TransactionDialog.account.new.tooltip=Click to create a new account
 TransactionDialog.account.tooltip=Select the account on which the transaction is made
 TransactionDialog.amount=Amount:
-TransactionDialog.amount.tooltip=Enter the transaction amount
+TransactionDialog.amount.tooltip=Enter the transaction amount here
 TransactionDialog.bad.amount=Disabled because the transaction amount is invalid
 TransactionDialog.bad.date=Disabled because the transaction date is invalid
 TransactionDialog.bad.valueDate=Disabled because the transaction value date is invalid
@@ -257,7 +257,7 @@ TransactionDialog.category=Category:
 TransactionDialog.category.tooltip=Select the category
 TransactionDialog.category.new.tooltip=Click to create a new category
 TransactionDialog.date=Transaction date:
-TransactionDialog.date.tooltip=Entrez ici la date de l'op\u00E9ration
+TransactionDialog.date.tooltip=Enter the transaction date here
 TransactionDialog.description=Description:
 TransactionDialog.description.tooltip=Enter the transaction description
 TransactionDialog.mode=Payment mode:
@@ -269,7 +269,7 @@ TransactionDialog.number.tooltip=Enter, if any, the transaction number
 TransactionDialog.receipt=Receipt
 TransactionDialog.receipt.tooltip=Check this if transaction is a receipt
 TransactionDialog.statement=Statement:
-TransactionDialog.statement.tooltip=Enter the statement ID. Leave blank if transaction is not already checked
+TransactionDialog.statement.tooltip=Enter the statement ID. Leave it blank if the transaction is not yet checked.
 TransactionDialog.title.new=New transaction
 TransactionDialog.title.edit=Edit transaction
 TransactionDialog.valueDate=Value date:
@@ -298,11 +298,11 @@ Mode.undefined=Undefined
 
 PreferencesDialog.title=Preferences
 PreferencesDialog.translatorMode=Translator mode
-PreferencesDialog.translatorMode.tooltip=Select this to display translation file keys instead of wordings
+PreferencesDialog.translatorMode.tooltip=Select this mode to see the keys of translation files instead of the translated text
 PreferencesDialog.Localization.title=Localization
 PreferencesDialog.Localization.toolTip=This tab allows you to configure the language and the country (which sets the currency used)
 PreferencesDialog.Localization.country=Country
-PreferencesDialog.Localization.countryList.tooltip=Choose a country in this list
+PreferencesDialog.Localization.countryList.tooltip=Select a country from this list
 PreferencesDialog.Localization.customCountry=Custom
 PreferencesDialog.Localization.customCountry.tooTip=Click on this or select the country from the following list to choose a country different from your system's default country
 PreferencesDialog.Localization.defaultCountry=Default ({0})
@@ -427,103 +427,103 @@ StatisticsPlugin.pie.tooltip=This chart shows category-wise distribution of net 
 StatisticsPlugin.pie.byCategory.empty=No category has more expenses than receipts
 StatisticsPlugin.pie.byCategory.title=Category-wise expenses
 StatisticsPlugin.title=Statistics
-StatisticsPlugin.tooltip=This tab displays some statistics about your accounts
+StatisticsPlugin.tooltip=This tab displays some statistics about your receipts and expenses
 
-HelpManager.errorDialog.message=Error {0} opening help
+HelpManager.errorDialog.message=Error in {0} opening help
 HelpManager.errorDialog.title=Unable to display help
 
-CustomFilterPanel.account.toolTip=Select valid accounts
-CustomFilterPanel.category.toolTip=Select valid categories
-CustomFilterPanel.mode.toolTip=Select valid payment modes
+CustomFilterPanel.account.toolTip=Select allowed accounts
+CustomFilterPanel.category.toolTip=Select allowed categories
+CustomFilterPanel.mode.toolTip=Select allowed payment modes
 
 CustomFilterPanel.description.toolTip=Text to compare with transaction's description
 CustomFilterPanel.description.contains=Contains
-CustomFilterPanel.description.contains.toolTip=Select to keep transactions with a description that contains the following field
+CustomFilterPanel.description.contains.toolTip=Select this if the description should contain the entered text
 CustomFilterPanel.description.equals=Equals to
-CustomFilterPanel.description.equals.toolTip=Select to keep transactions with a description equals to the following field
+CustomFilterPanel.description.equals.toolTip=Select this if the description should be the same as the entered text
 CustomFilterPanel.description.ignoreCase=Ignore case
-CustomFilterPanel.description.ignoreCase.toolTip=Check this box to ignore uppercase/lowercase differences
+CustomFilterPanel.description.ignoreCase.toolTip=Check this box to ignore differences in uppercase and lowercase 
 CustomFilterPanel.description.ignoreDiacriticals=Ignore diacritical marks
 CustomFilterPanel.description.ignoreDiacriticals.toolTip=Check this box to ignore diacritical marks during comparison
 CustomFilterPanel.description.regularExpression=Regular expression
-CustomFilterPanel.description.regularExpression.toolTip=Select to keep transactions with a description that matches the following regular expression
+CustomFilterPanel.description.regularExpression.toolTip=Select this if the description should satisfy the following regular expression
 
 CustomFilterPanel.amount.all=All
-CustomFilterPanel.amount.all.toolTip=Clears filter on transaction's amount
+CustomFilterPanel.amount.all.toolTip=Select this to not filter on the transaction amount
 CustomFilterPanel.amount.equals=Equals to
-CustomFilterPanel.amount.equals.toolTip=Selects transactions with amount equals to following field
+CustomFilterPanel.amount.equals.toolTip=Select this to see only those transactions where the amount equals the entered value
 CustomFilterPanel.amout.between=Between
-CustomFilterPanel.amout.between.toolTip=Selects transactions with amount between the following fields
+CustomFilterPanel.amout.between.toolTip=Select this to see only those transactions where the amount lies between the entered values
 CustomFilterPanel.amount.maximum=Maximum amount
 CustomFilterPanel.amount.to=and
 CustomFilterPanel.amout.minimum=Minimum amount
 
 CustomFilterPanel.date.all=All
-CustomFilterPanel.date.all.toolTip=Select this to clear transaction date filter
+CustomFilterPanel.date.all.toolTip=Select this to not filter on the transaction date
 CustomFilterPanel.date.equals=Equals to
-CustomFilterPanel.date.equals.toolTip=Select this to keep transactions with date equals to the following
+CustomFilterPanel.date.equals.toolTip=Select this to see only those transactions where the date is the same as the entered value
 CustomFilterPanel.date.between=Between
-CustomFilterPanel.date.between.toolTip=Select this to keep transactions with date between the following dates
-CustomFilterPanel.date.from.toolTip=First valid date
+CustomFilterPanel.date.between.toolTip=Select this to see only those transactions where the date lies between the entered values
+CustomFilterPanel.date.from.toolTip=First transaction date
 CustomFilterPanel.date.to=and
-CustomFilterPanel.date.to.toolTip=Last valid date
+CustomFilterPanel.date.to.toolTip=Last transaction date
 
 CustomFilterPanel.valueDate.all=All
-CustomFilterPanel.valueDate.all.toolTip=Select this to clear transaction value date filter
+CustomFilterPanel.valueDate.all.toolTip=Select this to not filter on the transaction value date
 CustomFilterPanel.valueDate.between=Between
-CustomFilterPanel.valueDate.between.toolTip=Select this to keep transactions with value date between the following dates
+CustomFilterPanel.valueDate.between.toolTip=Select this to see only those transactions where the value date lies between the entered values
 CustomFilterPanel.valueDate.equals=Equals to
-CustomFilterPanel.valueDate.equals.toolTip=Select this to keep transactions with value date equals to the following
-CustomFilterPanel.valueDate.from.toolTip=First valid value date
+CustomFilterPanel.valueDate.equals.toolTip=Select this to see only those transactions where the date is the same as the entered value
+CustomFilterPanel.valueDate.from.toolTip=First value date
 CustomFilterPanel.valueDate.to=and
-CustomFilterPanel.valueDate.to.toolTip=Last valid value date
+CustomFilterPanel.valueDate.to.toolTip=Last value date
 
 CustomFilterPanel.number.contains=Contains
-CustomFilterPanel.number.contains.toolTip=Select to keep transactions with number that contains the following field
+CustomFilterPanel.number.contains.toolTip=Select this if the transaction number should contain the number entered
 CustomFilterPanel.number.equals=Equals to
-CustomFilterPanel.number.equals.toolTip=Select to keep transactions with number equals to the following field
+CustomFilterPanel.number.equals.toolTip=Select this if the transaction number should be equal to the number entered
 CustomFilterPanel.number.regularExpression=Regular expression
-CustomFilterPanel.number.regularExpression.toolTip=Select to keep transactions with number that matches the following regular expression
-CustomFilterPanel.number.toolTip=Text to compare to transaction's number
+CustomFilterPanel.number.regularExpression.toolTip=Select this if the transaction number should satisfy the following regular expression
+CustomFilterPanel.number.toolTip=Text to compare with the transaction number
 
 CustomFilterPanel.check=Checking
-CustomFilterPanel.checked.toolTip=Unselect to avoid checked transactions
-CustomFilterPanel.unchecked.toolTip=Unselect to avoid unchecked transactions
+CustomFilterPanel.checked.toolTip=Check this box to allow checked transactions
+CustomFilterPanel.unchecked.toolTip=Check this box to allow unchecked transactions
 CustomFilterPanel.statement.contains=Contains
-CustomFilterPanel.statement.contains.toolTip=Select to keep transactions with statement ID that contains the following field
+CustomFilterPanel.statement.contains.toolTip=Select this if the statement should contain the following value
 CustomFilterPanel.statement.equals=Equals to
-CustomFilterPanel.statement.equals.toolTip=Select to keep transactions with statement equals to the following field
+CustomFilterPanel.statement.equals.toolTip=Select this if the statement should be equal to the following value
 CustomFilterPanel.statement.regularExpression=Regular expression
-CustomFilterPanel.statement.regularExpression.toolTip=Select to keep transactions with statement that matches the following regular expression
-CustomFilterPanel.statement.toolTip=Text to compare to transaction's statement
+CustomFilterPanel.statement.regularExpression.toolTip=Select this if the statement should satisfy the following regular expression
+CustomFilterPanel.statement.toolTip=Text to compare to transaction statement
 
 CustomFilterPanel.clearAll=Clear all filters
-CustomFilterPanel.clearAll.toolTip=Clears all filters
+CustomFilterPanel.clearAll.toolTip=Click here to clear all filters
 CustomFilterPanel.regexprHelp.toolTip=Click this to get help on regular expressions
 
 CustomFilterPanel.error.amountMimimum=The minimum amount is invalid
 CustomFilterPanel.error.amountMaximum=The maximum amount is invalid
-CustomFilterPanel.error.amountFromHigherThanTo=The minimum amount is higher than the maximum
+CustomFilterPanel.error.amountFromHigherThanTo=The minimum amount is more than the maximum
 CustomFilterPanel.error.dateFrom=The last date is invalid
 CustomFilterPanel.error.date.to=The first date is invalid
-CustomFilterPanel.error.dateFromHigherThanTo=The first date is after the last one
+CustomFilterPanel.error.dateFromHigherThanTo=The first date is later than the last date
 CustomFilterPanel.error.valueDateFrom=The first value date is invalid
 CustomFilterPanel.error.valueDateTo=The last value date is invalid
-CustomFilterPanel.error.valueDateFromHigherThanTo=The first value date is after the last one
+CustomFilterPanel.error.valueDateFromHigherThanTo=The first value date is later than the last value date
 CustomFilterPanel.error.noAccount=Please select one or more account
 CustomFilterPanel.error.noCategory=Please select one or more category
 CustomFilterPanel.error.noMode=Please select one or more mode
 
 BudgetPanel.title=Budget
-BudgetPanel.tooltip=Receipts and expenses distribution function of month/year and category
+BudgetPanel.tooltip=Distribution of receipts and expenses of the month/year
 BudgetPanel.export=Export
-BudgetPanel.export.toolTip=Exports this table to a text file
+BudgetPanel.export.toolTip=Exports this table as a text file
 BudgetPanel.filter=Filter
 BudgetPanel.filter.tooltip=Narrows the filter to current selection
-BudgetPanel.perMonth=Per month
-BudgetPanel.perMonth.tooltip=Selects the monthly bugdet view
-BudgetPanel.perYear=Per year
-BudgetPanel.perYear.tooltip=Selects the yearly bugdet view
+BudgetPanel.perMonth=Month-wise allocation
+BudgetPanel.perMonth.tooltip=Gets the monthly bugdet allocation
+BudgetPanel.perYear=Year-wise allocation
+BudgetPanel.perYear.tooltip=Gets the yearly bugdet allocation
 
 ErrorManager.message=An error occured \!\n Current operation is aborted.
 ErrorManager.title=ALERT \!\!\!
