--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -49,6 +49,13 @@ MainMenu.SaveAs=Save as ...
 MainMenu.SaveAs.Mnemonic=A
 MainMenu.SaveAs.ToolTip=Creates a copy of the current file
 
+MainMenu.Import=Import
+MainMenu.Import.Mnemonic=I
+MainMenu.Import.ToolTip=Imports data from text file saved earlier with another account manager
+MainMenu.Export=Export ...
+MainMenu.Export.Mnemonic=E
+MainMenu.Export.ToolTip=Exports data to a text file
+
 MainMenuBar.Print=Print...
 MainMenuBar.Print.ToolTip=Start printing
 MainMenuBar.Print.Accelerator=P
