Externalize export wording to Resources.properties file Improve the export dialog look

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -534,3 +534,14 @@ BudgetPanel.perYear.tooltip=Gets the yearly bugdet allocation
 
 ErrorManager.message=An error occured \!\n Current operation is aborted.
 ErrorManager.title=ALERT \!\!\!
+
+ExportDialog.title=Export ...
+ExportDialog.allRadioButton=Export all transactions
+ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
+ExportDialog.filteredRadioButton=Export filtered transactions
+ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
+ExportDialog.headerCheckbox=Include row headers
+ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
+ExportDialog.includeInitialBalanceCheckBox=Include initial balance
+ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
+ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
