Some work on file import

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -545,3 +545,7 @@ ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a head
 ExportDialog.includeInitialBalanceCheckBox=Include initial balance
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
+
+ImportDialog.title=Import
+ImportDialog.YapbamFields=Yapbam transaction fields
+ImportDialog.importedFields=Imported file columns
