--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -548,4 +548,16 @@ ExportDialog.message=<html>Check the columns to output to file.<br>Move the colu
 
 ImportDialog.title=Import
 ImportDialog.YapbamFields=Yapbam transaction fields
+ImportDialog.linkedTo=Linked to
 ImportDialog.importedFields=Imported file columns
+ImportDialog.importedFields.toolTip=Select here which file column contains the each Yapbam transaction attribute
+ImportDialog.ignoreFirstLine=Ignore first line
+ImportDialog.ignoreFirstLine.toolTip=Check this box to ignore the file first line (if it's a header line)
+ImportDialog.first.toolTip=Sets imported file columns menus to first file line
+ImportDialog.last.toolTip=Sets imported file columns menus to last file line
+ImportDialog.next.toolTip=Sets imported file columns menus to next file line
+ImportDialog.previous.toolTip=Sets imported file columns menus to previous file line
+ImportDialog.addToAccount=Add to account:
+ImportDialog.addToAccount.toolTip=Select the account where to add the transactions
+ImportDialog.addToCurrentFile=Add to current file
+ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file)
