--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -540,15 +540,17 @@ ExportDialog.allRadioButton=Export all transactions
 ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
 ExportDialog.filteredRadioButton=Export filtered transactions
 ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
-ExportDialog.headerCheckbox=Include row headers
+ExportDialog.headerCheckbox=Include column headers
 ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
 ExportDialog.includeInitialBalanceCheckBox=Include initial balance
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
+ExportDialog.nothingToExport=You must select at least one field to export
 
 ImportDialog.title=Import
 ImportDialog.YapbamFields=Yapbam transaction fields
 ImportDialog.linkedTo=Linked to
+ImportDialog.linkedTo.toolTip=Check these boxes to link file columns with transaction fields
 ImportDialog.importedFields=Imported file columns
 ImportDialog.importedFields.toolTip=Select here which file column contains the each Yapbam transaction attribute
 ImportDialog.ignoreFirstLine=Ignore first line
