--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -538,6 +538,13 @@ ErrorManager.title=ALERT \!\!\!
 ExportDialog.title=Export ...
 ExportDialog.allRadioButton=Export all transactions
 ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
+ExportDialog.columnSeparator=Column separator
+ExportDialog.columnSeparator.customized=Customized:
+ExportDialog.columnSeparator.customized.toolTip=Select this option to enter a customized separator in the field beside
+ExportDialog.columnSeparator.customizedChar.toolTip=Enter the customized separator here
+ExportDialog.columnSeparator.defaultSeparator=Default (Tab)
+ExportDialog.columnSeparator.defaultSeparator.toolTip=Select this option to use the default column separator (Tab character)
+ExportDialog.columnSeparator.customized.empty=Please type a customized column separator (only one character) or select the default one
 ExportDialog.filteredRadioButton=Export filtered transactions
 ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
 ExportDialog.headerCheckbox=Include column headers
