Edited strings on column separators

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -540,17 +540,17 @@ ExportDialog.allRadioButton=Export all transactions
 ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
 ExportDialog.columnSeparator=Column separator
 ExportDialog.columnSeparator.customized=Customized:
-ExportDialog.columnSeparator.customized.toolTip=Select this option to enter a customized separator in the field beside
-ExportDialog.columnSeparator.customizedChar.toolTip=Enter the customized separator here
+ExportDialog.columnSeparator.customized.toolTip=Select this option to specify a column separator of your choice
+ExportDialog.columnSeparator.customizedChar.toolTip=Enter the preferred separator
 ExportDialog.columnSeparator.defaultSeparator=Default (Tab)
-ExportDialog.columnSeparator.defaultSeparator.toolTip=Select this option to use the default column separator (Tab character)
-ExportDialog.columnSeparator.customized.empty=Please type a customized column separator (only one character) or select the default one
+ExportDialog.columnSeparator.defaultSeparator.toolTip=Select this option to use the default separator (Tab character)
+ExportDialog.columnSeparator.customized.empty=Please enter a column separator of your choice (only one character) or uncheck to use the default
 ExportDialog.filteredRadioButton=Export filtered transactions
-ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
+ExportDialog.filteredRadioButton.toolTip=Select this option to export only filtered transactions
 ExportDialog.headerCheckbox=Include column headers
 ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
 ExportDialog.includeInitialBalanceCheckBox=Include initial balance
-ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
+ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include transactions simulated to reflect the initial balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
 ExportDialog.nothingToExport=You must select at least one field to export
 
