--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -553,6 +553,7 @@ ExportDialog.includeInitialBalanceCheckBox=Include initial balance
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include transactions simulated to reflect the initial balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
 ExportDialog.nothingToExport=You must select at least one field to export
+ExportDialog.done=Export done
 
 ImportDialog.title=Import
 ImportDialog.YapbamFields=Yapbam transaction fields
@@ -570,3 +571,8 @@ ImportDialog.addToAccount=Add to account:
 ImportDialog.addToAccount.toolTip=Select the account where to add the transactions
 ImportDialog.addToCurrentFile=Add to current file
 ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file)
+ImportDialog.defaultAccount=Default account
+ImportDialog.help=Help
+ImportDialog.help.toolTip=Click this to get help on import
+ImportDialog.noAmountSelected=No incoming field is selected for amount
+ImportDialog.noDateSelected=No incoming field is selected for date
