--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -576,3 +576,7 @@ ImportDialog.help=Help
 ImportDialog.help.toolTip=Click this to get help on import
 ImportDialog.noAmountSelected=No incoming field is selected for amount
 ImportDialog.noDateSelected=No incoming field is selected for date
+ImportDialog.errorMessage.title=Errors occurred during import
+ImportDialog.errorMessagelienNumberColumnHeader=Line number
+ImportDialog.errorMessagelineColumnHeader=Line
+ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines were ignored.</html>
