--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -579,4 +579,4 @@ ImportDialog.noDateSelected=No incoming field is selected for date
 ImportDialog.errorMessage.title=Errors occurred during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
 ImportDialog.errorMessagelineColumnHeader=Line
-ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines were ignored.</html>
+ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
