--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -560,7 +560,7 @@ ImportDialog.YapbamFields=Yapbam transaction fields
 ImportDialog.linkedTo=Linked to
 ImportDialog.linkedTo.toolTip=Check these boxes to link file columns with transaction fields
 ImportDialog.importedFields=Imported file columns
-ImportDialog.importedFields.toolTip=Select here which file column contains the each Yapbam transaction attribute
+ImportDialog.importedFields.toolTip=Select here which file column contains each Yapbam transaction attribute
 ImportDialog.ignoreFirstLine=Ignore first line
 ImportDialog.ignoreFirstLine.toolTip=Check this box to ignore the file first line (if it's a header line)
 ImportDialog.first.toolTip=Sets imported file columns menus to first file line
