--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -51,7 +51,7 @@ MainMenu.SaveAs.ToolTip=Creates a copy of the current file
 
 MainMenu.Import=Import
 MainMenu.Import.Mnemonic=I
-MainMenu.Import.ToolTip=Imports data from text file saved earlier with another account manager
+MainMenu.Import.ToolTip=Imports data from a text file saved earlier with another account manager
 MainMenu.Export=Export ...
 MainMenu.Export.Mnemonic=E
 MainMenu.Export.ToolTip=Exports data to a text file
@@ -558,24 +558,24 @@ ExportDialog.done=Export done
 ImportDialog.title=Import
 ImportDialog.YapbamFields=Yapbam transaction fields
 ImportDialog.linkedTo=Linked to
-ImportDialog.linkedTo.toolTip=Check these boxes to link file columns with transaction fields
-ImportDialog.importedFields=Imported file columns
-ImportDialog.importedFields.toolTip=Select here which file column contains each Yapbam transaction attribute
+ImportDialog.linkedTo.toolTip=Check these boxes to associate columns in the file with fields of transactions
+ImportDialog.importedFields=Columns in the file
+ImportDialog.importedFields.toolTip=Select the column corresponding to each Yapbam transaction field
 ImportDialog.ignoreFirstLine=Ignore first line
-ImportDialog.ignoreFirstLine.toolTip=Check this box to ignore the file first line (if it's a header line)
-ImportDialog.first.toolTip=Sets imported file columns menus to first file line
-ImportDialog.last.toolTip=Sets imported file columns menus to last file line
-ImportDialog.next.toolTip=Sets imported file columns menus to next file line
-ImportDialog.previous.toolTip=Sets imported file columns menus to previous file line
-ImportDialog.addToAccount=Add to account:
-ImportDialog.addToAccount.toolTip=Select the account where to add the transactions
+ImportDialog.ignoreFirstLine.toolTip=If the first line of the file is a header, check this box to ignore the header 
+ImportDialog.first.toolTip=Uses the first line of the imported file for identifying the column titles
+ImportDialog.last.toolTip=Uses the last line of the imported file for identifying the column titles
+ImportDialog.next.toolTip=Uses the next line of the imported file for identifying the column titles
+ImportDialog.previous.toolTip=Uses the previous line of the imported file for identifying the column titles
+ImportDialog.addToAccount=Add to the account:
+ImportDialog.addToAccount.toolTip=Select the account to add the transactions
 ImportDialog.addToCurrentFile=Add to current file
-ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file)
+ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file for the imported transactions)
 ImportDialog.defaultAccount=Default account
 ImportDialog.help=Help
 ImportDialog.help.toolTip=Click this to get help on import
-ImportDialog.noAmountSelected=No incoming field is selected for amount
-ImportDialog.noDateSelected=No incoming field is selected for date
-ImportDialog.errorMessage.title=Errors occurred during import
+ImportDialog.noAmountSelected=The amount field is not associated with any column of the file
+ImportDialog.noDateSelected=The date field is not associated with any column of the file
+ImportDialog.errorMessage.title=Error during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
