--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -579,3 +579,7 @@ ImportDialog.noDateSelected=The date field is not associated with any column of 
 ImportDialog.errorMessage.title=Error during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
+
+
+-- Added after v0.6.0
+BalanceHistory.alertTooltipAdd=First alert on {0}
