Preliminary work about cheque books support

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -583,3 +583,9 @@ ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>Th
 
 -- Added after v0.6.0
 BalanceHistory.alertTooltipAdd=First alert on {0}
+
+ChequeBookDialog.Delete.tooltip=Deletes the selected cheque book
+ChequeBookDialog.border.title=Cheque books
+ChequeBookDialog.prefix.short=Prefix
+ChequeBookDialog.number.short=Number of cheques
+ChequeBookDialog.next.short=next
