--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -584,8 +584,15 @@ ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>Th
 -- Added after v0.6.0
 BalanceHistory.alertTooltipAdd=First alert on {0}
 
-ChequeBookDialog.Delete.tooltip=Deletes the selected cheque book
-ChequeBookDialog.border.title=Cheque books
-ChequeBookDialog.prefix.short=Prefix
-ChequeBookDialog.number.short=Number of cheques
-ChequeBookDialog.next.short=next
+AccountManager.modesNumber.title=Number of payment modes
+AccountManager.modesNumber.toolTip=This column contains the number of payment modes attached to this account
+AccountManager.checkbooksNumber.title=Number of checkbooks
+AccountManager.checkbooksNumber.toolTip=This column contains the number of checkbooks attached to this account
+
+checkbookDialog.Delete.tooltip=Deletes the selected checkbook
+checkbookDialog.border.title=Checkbooks
+checkbookDialog.prefix.short=Prefix
+checkbookDialog.remaining.short=Number of checks remaining
+checkbookDialog.next.short=next
+checkbookDialog.New.tooltip=Creates a new checkbook
+checkbookDialog.title.new=New checkbook
