--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -590,9 +590,17 @@ AccountManager.checkbooksNumber.title=Number of checkbooks
 AccountManager.checkbooksNumber.toolTip=This column contains the number of checkbooks attached to this account
 
 checkbookDialog.Delete.tooltip=Deletes the selected checkbook
-checkbookDialog.border.title=Checkbooks
-checkbookDialog.prefix.short=Prefix
 checkbookDialog.remaining.short=Number of checks remaining
-checkbookDialog.next.short=next
+checkbookDialog.next.short=Next check
 checkbookDialog.New.tooltip=Creates a new checkbook
 checkbookDialog.title.new=New checkbook
+checkbookDialog.border.title=Checkbooks
+checkbookDialog.number=Number of checks:
+checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
+checkbookDialog.first=First check's number:
+checkbookDialog.first.tooltip=Enter the first check number in the checkbook
+checkbookDialog.error.firstIsBlank=Disabled because the first check is blank
+checkbookDialog.error.noNumericalSuffix=Disabled because the first check number has not a numerical suffix
+checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is empty
+checkbookDialog.error.numberIsNegative=Disabled because the number of checks you entered is not a positive integer
+checkbookDialog.error.numericalSuffixToSmall=Disabled because the check number numerical suffix is too small to contain last check number
