--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -594,6 +594,7 @@ checkbookDialog.remaining.short=Number of checks remaining
 checkbookDialog.next.short=Next check
 checkbookDialog.New.tooltip=Creates a new checkbook
 checkbookDialog.title.new=New checkbook
+checkbookDialog.title.edit= Edit checkbook
 checkbookDialog.border.title=Checkbooks
 checkbookDialog.number=Number of checks:
 checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
@@ -602,5 +603,5 @@ checkbookDialog.first.tooltip=Enter the first check number in the checkbook
 checkbookDialog.error.firstIsBlank=Disabled because the first check is blank
 checkbookDialog.error.noNumericalSuffix=Disabled because the first check number has not a numerical suffix
 checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is empty
-checkbookDialog.error.numberIsNegative=Disabled because the number of checks you entered is not a positive integer
+checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is not a positive integer or is two big
 checkbookDialog.error.numericalSuffixToSmall=Disabled because the check number numerical suffix is too small to contain last check number
