--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -596,12 +596,16 @@ checkbookDialog.New.tooltip=Creates a new checkbook
 checkbookDialog.title.new=New checkbook
 checkbookDialog.title.edit= Edit checkbook
 checkbookDialog.border.title=Checkbooks
-checkbookDialog.number=Number of checks:
-checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
+checkbookDialog.prefix=Prefix
+checkbookDialog.prefix.tooltip=Enter the prefix common to all checks in the check book
 checkbookDialog.first=First check's number:
 checkbookDialog.first.tooltip=Enter the first check number in the checkbook
+checkbookDialog.number=Number of checks:
+checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
+checkbookDialog.next=Next available check's number:
+checkbookDialog.next.tooltip=Enter the next available check number of the checkbook
 checkbookDialog.error.firstIsBlank=Disabled because the first check is blank
-checkbookDialog.error.noNumericalSuffix=Disabled because the first check number has not a numerical suffix
-checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is empty
-checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is not a positive integer or is two big
-checkbookDialog.error.numericalSuffixToSmall=Disabled because the check number numerical suffix is too small to contain last check number
+checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is blank
+checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is too big
+checkbookDialog.error.nextIsBlank=Disabled because the next check is blank
+checkbookDialog.error.nextOutsideOfCheckbook=Disabled because the next check number is not contained in this checkbook
