Add web resources access

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -582,6 +582,11 @@ ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>Th
 
 
 -- Added after v0.6.0
+MainMenu.web.support=Get support
+MainMenu.web.support.tooltip=Opens Yapbam support web page (requires an Internet connection) to report a bug, a translation mistake, get support, ... 
+MainMenu.web.yapbam=Visit Yapbam web site
+MainMenu.web.yapbam.tooltip=Opens Yapbam web site home page (requires an Internet connection)
+
 BalanceHistory.alertTooltipAdd=First alert on {0}
 
 AccountManager.modesNumber.title=Number of payment modes
