--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -581,7 +581,7 @@ ImportDialog.errorMessagelienNumberColumnHeader=Line number
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
 
 
--- Added after v0.6.0
+-- Added since v0.6.0
 MainMenu.web.support=Get support
 MainMenu.web.support.tooltip=Opens Yapbam support web page (requires an Internet connection) to report a bug, a translation mistake, get support, ... 
 MainMenu.web.yapbam=Visit Yapbam web site
