--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 	<================================================================================================-->
 	<property file="customPaths.properties"/>
 	
-	<property name="yapbamVersion" value="0.6.0"/>
+	<property name="yapbamVersion" value="0.6.1.a1"/>
 	<tstamp><format property="TODAY" pattern="dd/MM/yyyy" locale="fr,FR"/></tstamp>
 	
 	<target name="build">
