--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -589,6 +589,8 @@ MainMenu.web.yapbam.tooltip=Opens Yapbam web site home page (requires an Interne
 
 BalanceHistory.alertTooltipAdd=First alert on {0}
 
+TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
+
 AccountManager.modesNumber.title=Number of payment modes
 AccountManager.modesNumber.toolTip=This column contains the number of payment modes attached to this account
 AccountManager.checkbooksNumber.title=Number of checkbooks
