--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -586,6 +586,9 @@ MainMenu.web.support=Get support
 MainMenu.web.support.tooltip=Opens Yapbam support web page (requires an Internet connection) to report a bug, a translation mistake, get support, ... 
 MainMenu.web.yapbam=Visit Yapbam web site
 MainMenu.web.yapbam.tooltip=Opens Yapbam web site home page (requires an Internet connection)
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancel search for updates
+MainMenu.CheckUpdate.Dialog.message=Looking for updates. Please wait ...
+MainMenu.CheckUpdate.Dialog.title=Checking for updates
 
 BalanceHistory.alertTooltipAdd=First alert on {0}
 
