Fixes bugs on empty checkbooks

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -600,6 +600,7 @@ AccountManager.checkbooksNumber.title=Number of checkbooks
 AccountManager.checkbooksNumber.toolTip=This column contains the number of checkbooks attached to this account
 
 checkbookDialog.Delete.tooltip=Deletes the selected checkbook
+checkbookDialog.book.short=Checkbook
 checkbookDialog.remaining.short=Number of checks remaining
 checkbookDialog.next.short=Next check
 checkbookDialog.New.tooltip=Creates a new checkbook
